[tool.poetry]
name = "grass_ng"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
grass_ng = 'grass_ng.console:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

